--- a/frontend/src/app/authorization/pages/authorization/authorization.component.html
+++ b/frontend/src/app/authorization/pages/authorization/authorization.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar appHiderElement [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin" class="progres-line" mode="indeterminate"></mat-progress-bar>
 <div class="js-fullheight img">
   <section class="ftco-section">
     <div class="container">
