--- a/frontend/src/app/authorization/components/login/login.component.html
+++ b/frontend/src/app/authorization/components/login/login.component.html
@@ -29,7 +29,7 @@
             <a style="color: #fff; text-decoration: underline" [routerLink]="['../../registration']" class="text-center">Vytvořit účet</a>
           </div>
           <div class="text-end">
-            <a href="#" style="color: #fff;text-decoration: underline">Zapomenuté heslo?</a>
+            <a [routerLink]="['../../password-forgotten']"  style="color: #fff;text-decoration: underline">Zapomenuté heslo?</a>
           </div>
         </div>
       </form>
