--- a/frontend/src/app/layout/components/layout2/layout2.component.html
+++ b/frontend/src/app/layout/components/layout2/layout2.component.html
@@ -116,7 +116,8 @@
             </li>
             <li class="nav-item topbar-icon dropdown hidden-caret">
               <a class="nav-link dropdown-toggle" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-bell"></i>
+<!--                <i class="fa fa-bell"></i>-->
+                <fa-icon [icon]="faBell" class="nav-icon"></fa-icon>
 <!--                <span class="notification">4</span>-->
               </a>
               <ul class="dropdown-menu notif-box animated fadeIn" aria-labelledby="notifDropdown">
