--- a/backend/sitebuilder/templates/email/LoginRegistration/password_reset_link.html.twig
+++ b/backend/sitebuilder/templates/email/LoginRegistration/password_reset_link.html.twig
@@ -3,5 +3,5 @@
     Odkaz na obnovu hesla
 {% endblock %}
 {% block content_text %}
-    Vaše heslo můžete obnovit na tomto odkazu <a href="{{ url('user_activation', {hash: hash}) }}">zde</a>
+    Vaše heslo můžete obnovit na tomto odkazu <a href="{{link}}">zde</a>
 {% endblock %}
