--- a/frontend/src/app/authorization/components/password-forgotten/password-forgotten.component.html
+++ b/frontend/src/app/authorization/components/password-forgotten/password-forgotten.component.html
@@ -22,7 +22,7 @@
           </div>
         </form>
       } @else {
-        <p>Na váš email byly zaslány instrukce pro obnovu hesla</p>
+        <p class="text-center">Na váš email byly zaslány instrukce pro obnovu hesla</p>
       }
     </div>
   </div>
