--- a/frontend/src/app/authorization/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/authorization/components/reset-password/reset-password.component.html
@@ -6,17 +6,26 @@
 <div class="row justify-content-center">
   <div class="col-md-6 col-lg-4">
     <div class="login-wrap p-0">
-      <h3 class="mb-4 text-center">ZAdejte nové heslo</h3>
+      <h3 class="mb-4 text-center">Zadejte nové heslo</h3>
       <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="signin-form">
-        <div appFormError class="form-group">
-          <input type="password" class="form-control" placeholder="Nové heslo" required formControlName="password">
+        <div appFormError formGroupName="password">
+          <div class="form-group">
+            <div #errorFormContainer class="input-group">
+              <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
+            </div>
+          </div>
+          <div appFormError class="form-group">
+            <div #errorFormContainer class="input-group">
+              <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
+            </div>
+          </div>
         </div>
         <div class="form-group">
           <button type="submit" class="form-control btn btn-primary submit px-3">Odeslat</button>
         </div>
         <div class="form-group d-flex">
           <div class="w-100 text-center">
-            <a style="color: #fff; text-decoration: underline" [routerLink]="['../login']" class="">Přihlásit se</a>
+            <a style="color: #fff; text-decoration: underline" [routerLink]="['../../login']" class="">Přihlásit se</a>
           </div>
         </div>
       </form>
