--- a/backend/sitebuilder/templates/email/LoginRegistration/account_activation.html.twig
+++ b/backend/sitebuilder/templates/email/LoginRegistration/account_activation.html.twig
@@ -3,5 +3,5 @@
     Aktivace nového účtu
 {% endblock %}
 {% block content_text %}
-    Aktivaci nového účtu provedete kliknutím na následující odkaz <a href="{{ url('user_activation', {hash: hash}) }}">zde</a>
+    Aktivaci nového účtu provedete kliknutím na následující odkaz <a href="{{link}}">zde</a>
 {% endblock %}
