--- a/frontend/src/app/authorization/components/registration/registration.component.html
+++ b/frontend/src/app/authorization/components/registration/registration.component.html
@@ -6,38 +6,42 @@
 <div class="row justify-content-center">
   <div class="col-md-6 col-lg-4">
     <div class="login-wrap p-0">
-      <form *ngIf="!activationSend" [formGroup]="registrationForm" class="signin-form">
-        <div appFormError class="form-group">
-          <div #errorFormContainer class="input-group">
-            <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
-          </div>
-        </div>
-        <div appFormError class="form-group">
-          <div #errorFormContainer class="input-group">
-            <input type="text" class="form-control" placeholder="Email" formControlName="email">
-          </div>
-        </div>
-        <div appFormError formGroupName="password">
-          <div class="form-group">
+      @if(!activationSend) {
+        <form [formGroup]="registrationForm" class="signin-form">
+          <div appFormError class="form-group">
             <div #errorFormContainer class="input-group">
-              <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
+              <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
             </div>
           </div>
           <div appFormError class="form-group">
             <div #errorFormContainer class="input-group">
-              <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
+              <input type="text" class="form-control" placeholder="Email" formControlName="email">
             </div>
           </div>
-        </div>
-        <div class="form-group">
-          <button type="submit" class="form-control btn btn-primary submit px-3">Vytvořit účet</button>
-        </div>
-        <div class="form-group d-flex">
-          <div class="w-100 text-center">
-            <a style="color: #fff; text-decoration: underline" [routerLink]="['../login']" class="">Přihlásit se</a>
+          <div appFormError formGroupName="password">
+            <div class="form-group">
+              <div #errorFormContainer class="input-group">
+                <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
+              </div>
+            </div>
+            <div appFormError class="form-group">
+              <div #errorFormContainer class="input-group">
+                <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
+              </div>
+            </div>
           </div>
-        </div>
-      </form>
+          <div class="form-group">
+            <button type="submit" class="form-control btn btn-primary submit px-3">Vytvořit účet</button>
+          </div>
+          <div class="form-group d-flex">
+            <div class="w-100 text-center">
+              <a style="color: #fff; text-decoration: underline" [routerLink]="['../login']" class="">Přihlásit se</a>
+            </div>
+          </div>
+        </form>
+      } @else {
+        <p class="text-center">Na váš email byl odeslán odkaz na aktivaci vašeho účtu.</p>
+      }
     </div>
   </div>
 </div>
