--- a/frontend/src/app/layout/components/layout2/layout2.component.html
+++ b/frontend/src/app/layout/components/layout2/layout2.component.html
@@ -8,8 +8,8 @@
       <!-- Logo Header -->
       <div class="logo-header" data-background-color="dark">
 
-        <a href="index.html" class="logo">
-          <img src="assets/img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20">
+        <a href="/" class="logo">
+          <img src="/assets/website/netdropper.png" alt="navbar brand" class="navbar-brand" width="171">
         </a>
         <div class="nav-toggle">
           <button class="btn btn-toggle toggle-sidebar">
@@ -88,8 +88,8 @@
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="dark">
 
-          <a href="index.html" class="logo">
-            <img src="assets/img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20">
+          <a href="/" class="logo">
+            <img src="/assets/website/netdropper.png" alt="navbar brand" class="navbar-brand" width="170">
           </a>
           <div class="nav-toggle">
             <button class="btn btn-toggle toggle-sidebar">
