--- a/frontend/src/assets/website/styles.css
+++ b/frontend/src/assets/website/styles.css
@@ -64,7 +64,7 @@
 body {
   font-family: var(--font-default);
   color: var(--text-color);
-  background: var(--theme-color);
+  background: black;
   transition: 0.5s background ease;
 }
 
@@ -226,7 +226,7 @@ img:hover {
 .breadcrumbs .page-header {
   padding: 120px 0 60px 0;
   min-height: 20vh;
-  /*background: url(../images/page-header-bg.png) center bottom;*/
+  background: url(orion.png) center bottom;
   background-size: cover;
   border-radius: 0px;
   overflow: hidden;
@@ -241,13 +241,12 @@ img:hover {
     right: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(360deg,var(--light-color), var(--light-color));
     z-index: 0;
     opacity: 0.6;
 }
 
 .breadcrumbs .page-header h2 {
-  color: var(--color-primary);
+  color: white;
 }
 
 .breadcrumbs .page-header p {
@@ -441,7 +440,7 @@ img:hover {
 }
 
 .header.sticked {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
