--- a/frontend/src/app/website/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.html
@@ -17,21 +17,31 @@
         </div>
         <div class="d-flex justify-content-start">
           <a href="{{systemInfoService.getAdminHostname()}}" class="btn-get-started mr-20 aos-init " data-aos="fade-up" data-aos-delay="800">Vytvořit web</a>
-          <a href="#main" class="btn-get-started aos-init " data-aos="fade-up" data-aos-delay="1000">Zjistit více</a>
+          <a href="#featured" class="btn-get-started aos-init " data-aos="fade-up" data-aos-delay="1000">Zjistit více</a>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End Hero Section -->
+
 <main id="main">
-  <!-- Start Service Section -->
+  <section>
+    <div class="container" id="featured">
+      <div class="section-header aos-init " data-aos="fade-up" data-aos-delay="100">
+        <h2>Co je vlastně ten <span class="logo"><span class="first">Net</span><span class="second">Dropper</span></span>?</h2>
+        <p>NetDropper je unikátní platforma pro snadnou tvorbu internetových stránek.
+          Tento systém drag&drop umožňuje uživatelům jednoduše sestavit web pomocí přetahování prvků, jako jsou texty, obrázky nebo videa, přímo na pracovní plochu. Uživatelé si mohou vybírat z přednastavených šablon a komponent, které pak intuitivně upravují podle svých potřeb. Tento systém nevyžaduje žádné programovací znalosti a poskytuje okamžitý náhled na výsledný design. Funkcionality jako změna velikosti, barvy a rozložení prvků jsou snadno dostupné přímo v editoru. Výsledkem je rychlá a efektivní tvorba webových stránek i pro začátečníky bez znalosti jakéhokoliv programovacího jazyka.
+        </p>
+      </div>
+    </div>
+  </section>
+
   <div id="services" class="section">
     <div class="top-icon-box position-relative">
       <div class="container position-relative">
         <div class="row gy-4">
           <div class="section-header aos-init " data-aos="fade-up" data-aos-delay="100">
-            <h2>Proč používat náš systém?</h2>
+            <h2>Proč používat náš systém <span class="logo"><span class="first">Net</span><span class="second">Dropper</span></span>?</h2>
             <p>Podívejte se na výhody, které přináší náš systém na tvorbu internetových stránek:</p>
           </div>
           <div class="col-xl-4 col-md-4 aos-init " data-aos="fade-up" data-aos-delay="100">
@@ -109,95 +119,6 @@
   <!-- End Service Section -->
 
   <!-- Featured -->
-  <section>
-    <div class="container" id="featured">
-      <div class="section-header aos-init " data-aos="fade-up" data-aos-delay="100">
-        <h2>Why Choose Us</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
-      <div class="row">
-        <!-- start  left -->
-        <div class="col-md-4 left">
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="100">
-            <div class="description">
-              <h4>Experience</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="icon">
-              <img src="./it web template_files/icon-1.svg" alt="icon">
-            </div>
-          </div>
-
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="400">
-            <div class="description">
-              <h4>Products</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="icon">
-              <img src="./it web template_files/icon-2.svg" alt="icon">
-            </div>
-          </div>
-
-
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="500">
-            <div class="description">
-              <h4>Approach</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="icon">
-              <img src="./it web template_files/icon-3.svg" alt="icon">
-            </div>
-          </div>
-        </div>
-        <!-- end  left -->
-
-        <!-- start  center -->
-        <div class="col-md-4 p-4 p-sm-5 center">
-          <div class="list-center-wrap aos-init " data-aos="fade-up" data-aos-delay="100">
-            <div class="center-icon">
-              <img src="./it web template_files/features.jpg" alt="icon">
-            </div>
-          </div>
-        </div>
-        <!-- end  center -->
-        <!-- start  right -->
-        <div class="col-md-4 right">
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="100">
-            <div class="icon">
-              <img src="./it web template_files/icon-4.svg" alt="icon">
-            </div>
-            <div class="description">
-              <h4>Pricing</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="200">
-            <div class="icon">
-              <img src="./it web template_files/icon-5.svg" alt="icon">
-            </div>
-            <div class="description">
-              <h4>Delivery</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-
-
-          <div class="list-wrap aos-init " data-aos="fade-up" data-aos-delay="500">
-            <div class="icon">
-              <img src="./it web template_files/icon-6.svg" alt="icon">
-            </div>
-            <div class="description">
-              <h4>Support</h4>
-              <p>Ronsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <!-- end  right -->
-      </div>
-
-    </div>
-  </section>
   <!-- Featured -->
 
 
@@ -205,8 +126,8 @@
   <section id="portfolio" class="portfolio">
     <div class="container aos-init " data-aos="fade-up">
       <div class="section-header">
-        <h2>Our Portfolio</h2>
-        <p>Lorem ipsum dolor sit amet</p>
+        <h2>Ukázky webů našich zákazníků</h2>
+        <p>Podívejte se na některé weby, které si vytvořili sami naši zákazníci</p>
       </div>
       <div class="portfolio-isotope aos-init " data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
         <div>
