--- a/frontend/src/app/website/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/website/pages/dashboard/dashboard.component.html
@@ -9,12 +9,12 @@
       <div class="col-lg-7 dark-bg order-lg-1 d-flex flex-column justify-content-start text-left caption">
         <h2 data-aos="fade-up" class="aos-init ">Vytvořte si vlastní <span>webové stránky</span><span class="circle aos-init " data-aos="fade-right" data-aos-delay="800">.</span></h2>
         <p data-aos="fade-up" data-aos-delay="400" class="aos-init ">Náš systému je ideální pro ty, kteří hledají rychlý, cenově dostupný a snadno použitelný způsob, jak vytvořit profesionální webové stránky, aniž by potřebovali hluboké technické znalosti.</p>
-        <div class="social aos-init " data-aos="fade-up" data-aos-delay="600">
-          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>
-          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>
-          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>
-          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>
-        </div>
+<!--        <div class="social aos-init " data-aos="fade-up" data-aos-delay="600">-->
+<!--          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>-->
+<!--          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>-->
+<!--          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>-->
+<!--          <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>-->
+<!--        </div>-->
         <div class="d-flex justify-content-start">
           <a href="{{systemInfoService.getAdminHostname()}}" class="btn-get-started mr-20 aos-init " data-aos="fade-up" data-aos-delay="800">Vytvořit web</a>
           <a href="#featured" class="btn-get-started aos-init " data-aos="fade-up" data-aos-delay="1000">Zjistit více</a>
@@ -130,51 +130,41 @@
         <p>Podívejte se na některé weby, které si vytvořili sami naši zákazníci</p>
       </div>
       <div class="portfolio-isotope aos-init " data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order" data-aos="fade-up" data-aos-delay="100">
-        <div>
-          <ul class="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App Design</li>
-            <li data-filter=".filter-product">App Development</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">It Solutions</li>
-          </ul><!-- End Portfolio Filters -->
-        </div>
-
         <div class="row gy-4 portfolio-container" style="position: relative; height: 555.812px;">
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-1.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-1.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-product" style="position: absolute; left: 380px; top: 0px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-2.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-2.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-branding" style="position: absolute; left: 760px; top: 0px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-3.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-3.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-books" style="position: absolute; left: 0px; top: 277.906px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-4.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-4.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-4.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-4.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 380px; top: 277.906px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-5.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-5.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-5.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-5.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
 
           <div class="col-xl-4 col-md-6 portfolio-item filter-branding" style="position: absolute; left: 760px; top: 277.906px;">
             <div class="portfolio-wrap">
-              <a href="./it web template_files/product-6.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="./it web template_files/product-6.jpg" class="img-fluid" alt=""></a>
+              <a href="/assets/website/product-6.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="/assets/website/product-6.jpg" class="img-fluid" alt=""></a>
             </div>
           </div><!-- End Portfolio Item -->
         </div><!-- End Portfolio Container -->
@@ -515,23 +505,23 @@
       <div class="row gy-4 align-items-center">
         <div class="col-lg-4">
           <div class="stats-item d-flex flex-column align-items-center">
-            <div class="icon circle"><img src="./it web template_files/happy-clients.svg" alt="icon"></div>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="0" class="purecounter">232</span>
-            <p><span>Happy Clients</span> consequuntur quae diredo</p>
+            <div class="icon circle"><fa-icon [icon]="faClock" class=""></fa-icon></div>
+            <span><b>200+</b></span>
+            <p>Hodin vývoje</p>
           </div><!-- End Stats Item -->
         </div>
         <div class="col-lg-4">
           <div class="stats-item d-flex flex-column align-items-center">
-            <div class="icon circle"><img src="./it web template_files/complete-projects.svg" alt="icon"></div>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="0" class="purecounter">521</span>
-            <p><span>Completed Projects</span> adipisci atque quia aut</p>
+            <div class="icon circle"><fa-icon [icon]="faUser" class=""></fa-icon></div>
+            <b><span>2000+</span></b>
+            <p>Spokojených zákazníků</p>
           </div><!-- End Stats Item -->
         </div>
         <div class="col-lg-4">
           <div class="stats-item d-flex flex-column align-items-center">
-            <div class="icon circle"><img src="./it web template_files/hours-support.svg" alt="icon"></div>
-            <span data-purecounter-start="0" data-purecounter-end="453" data-purecounter-duration="0" class="purecounter">453</span>
-            <p><span>Hours Of Support</span> aut commodi quaerat</p>
+            <div class="icon circle"><fa-icon [icon]="faTicket" class=""></fa-icon></div>
+            <b><span>250+</span></b>
+            <p>Zodpovězených dotazů</p>
           </div><!-- End Stats Item -->
         </div>
       </div>
@@ -540,98 +530,12 @@
   <!--  End Counter Section  -->
 
   <!--  Clients Section  -->
-  <div id="clients" class="clients section">
-    <div class="container aos-init " data-aos="zoom-out">
 
-      <div class="clients-slider swiper swiper-initialized swiper-horizontal swiper-pointer-events">
-        <div class="swiper-wrapper align-items-center" id="swiper-wrapper-26ba081d04547884" aria-live="off" style="transition-duration: 0ms; transform: translate3d(-2116.8px, 0px, 0px);"><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="3" role="group" aria-label="4 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" data-swiper-slide-index="4" role="group" aria-label="5 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-5.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-next" data-swiper-slide-index="5" role="group" aria-label="6 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-6.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="6" role="group" aria-label="7 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-7.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="7" role="group" aria-label="8 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-8.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide" data-swiper-slide-index="0" role="group" aria-label="1 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-1.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide" data-swiper-slide-index="1" role="group" aria-label="2 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-2.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide" data-swiper-slide-index="2" role="group" aria-label="3 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-3.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide swiper-slide-prev" data-swiper-slide-index="3" role="group" aria-label="4 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-4.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="4" role="group" aria-label="5 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-5.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="5" role="group" aria-label="6 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-6.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide" data-swiper-slide-index="6" role="group" aria-label="7 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-7.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide" data-swiper-slide-index="7" role="group" aria-label="8 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-8.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="0" role="group" aria-label="1 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-1.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="1" role="group" aria-label="2 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-2.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="2" role="group" aria-label="3 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-3.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" data-swiper-slide-index="3" role="group" aria-label="4 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" data-swiper-slide-index="4" role="group" aria-label="5 / 8" style="width: 175.2px; margin-right: 60px;"><img src="./it web template_files/client-5.png" class="img-fluid" alt=""></div></div>
-        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-
-    </div>
-  </div>
   <!-- End Clients Section -->
 
 
   <!--  Our Team Section  -->
-  <section id="team" class="team sections-bg">
-    <div class="container aos-init " data-aos="fade-up">
 
-      <div class="section-header">
-        <h2>Team</h2>
-        <p>Lorem ipsum dolor sit amet</p>
-      </div>
-
-      <div class="row gy-4">
-
-        <div class="col-xl-3 col-md-6 d-flex aos-init " data-aos="fade-up" data-aos-delay="100">
-          <div class="member">
-            <img src="./it web template_files/team-1.jpg" class="img-fluid" alt="">
-            <h4>Jhone Bi</h4>
-            <span>Application Manager</span>
-            <div class="social">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>
-            </div>
-          </div>
-        </div><!-- End Team Member -->
-
-        <div class="col-xl-3 col-md-6 d-flex aos-init " data-aos="fade-up" data-aos-delay="200">
-          <div class="member">
-            <img src="./it web template_files/team-2.jpg" class="img-fluid" alt="">
-            <h4>Sani Awesome</h4>
-            <span>Social Media</span>
-            <div class="social">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>
-            </div>
-          </div>
-        </div><!-- End Team Member -->
-
-        <div class="col-xl-3 col-md-6 d-flex aos-init " data-aos="fade-up" data-aos-delay="300">
-          <div class="member">
-            <img src="./it web template_files/team-3.jpg" class="img-fluid" alt="">
-            <h4>Andrio Willi</h4>
-            <span>Content Writer</span>
-            <div class="social">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>
-            </div>
-          </div>
-        </div><!-- End Team Member -->
-
-        <div class="col-xl-3 col-md-6 d-flex aos-init " data-aos="fade-up" data-aos-delay="400">
-          <div class="member">
-            <img src="./it web template_files/team-4.jpg" class="img-fluid" alt="">
-            <h4>Afa Jonson</h4>
-            <span>Business Manager</span>
-            <div class="social">
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-twitter"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-facebook"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-linkedin"></i></a>
-              <a href="https://zrtechsolutions.com/demo/html/technoit/"><i class="bi bi-instagram"></i></a>
-            </div>
-          </div>
-        </div><!-- End Team Member -->
-
-      </div>
-
-    </div>
-  </section>
   <!-- End Our Team Section -->
 
 
