--- a/frontend/src/app/website/components/website/website.component.html
+++ b/frontend/src/app/website/components/website/website.component.html
@@ -61,7 +61,7 @@
 
 </div>
 <!--  Hero Section  -->
-<router-outlet></router-outlet>
+<router-outlet (activate)="routeActivate()"></router-outlet>
 <!-- End #main -->
 
 <!--  Footer  -->
@@ -163,9 +163,5 @@
   </div>
 </footer>
 <!-- End Footer -->
-
-<a href="https://zrtechsolutions.com/demo/html/technoit/#" class="scroll-top d-flex align-items-center justify-content-center">
-  <i class="bi bi-arrow-up-short"></i>
-</a>
 
 </body></html>
