--- a/frontend/src/assets/website/styles.css
+++ b/frontend/src/assets/website/styles.css
@@ -159,7 +159,7 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding-top: 60px;
+  padding: 60px;
   overflow: hidden;
 }
 
@@ -1036,7 +1036,7 @@ section {background: var(--light-color);}
 # Call To Action Section
 --------------------------------------------------------------*/
 .call-to-action {
-  /*background: url(../images/hero-bg.png) center left;*/
+  background: url(background.png) center left;
   background-size: cover;
   padding: 150px 0px;
   border-radius: 0px;
@@ -1099,7 +1099,6 @@ section {background: var(--light-color);}
   right: 0;
   width: 100%;
   height: 100%;
-  background: #000000;
   z-index: 0;
   opacity: 0.6;
 }
@@ -2324,7 +2323,7 @@ dl, ol, ul {
 .stats-counter .stats-item span {
   font-size: 24px;
   display: block;
-  color: var(--color-primary);
+  color: white;
   line-height: 34px;
   text-align: center;
 }
@@ -2338,6 +2337,14 @@ dl, ol, ul {
   align-items: center;
 }
 
+#stats-counter {
+  position:relative;
+}
+
+#stats-counter .icon {
+  font-size: 48px;
+  color: wheat;
+}
 
 /*--------------------------------------------------------------
 # Portfolio Section
